# fundamentos-OS-Projeto

./: .gitignore  CMakeLists.txt  README.md  descricao_projeto.md
include/: city.h  file.h  list.h  logger.h  teste.h  types.h
input/: mqtt_senzemo_cx_bg_reduzido.json  senzemo_cx_bg_reduzido.json
src/: city.c  file.c  logger.c  main.c
